--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,5 +38,4 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests!
-      - run: mvn clean package -DskipTests=true
-      - run: mvn clean test
+      - run: mvn clean package
