--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,27 +15,10 @@ jobs:
       # - image: circleci/postgres:9.4
 
     working_directory: ~/repo
+dependencies:
+  override:
+    - mvn -DskipTests clean package dependency:resolve-plugins dependency:go-offline
 
-    environment:
-      # Customize the JVM maximum heap limit
-      MAVEN_OPTS: -Xmx3200m
-
-    steps:
-      - checkout
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "pom.xml" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: mvn dependency:go-offline
-
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: v1-dependencies-{{ checksum "pom.xml" }}
-
-      # run tests!
-      - run: mvn clean package
+test:
+  override:
+    - mvn -o surefire:test
